--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,11 @@ python = "^3.6.2"
 django = ">=2.2"
 jsonfield = ">=3.0"
 stripe = ">=2.48.0"
+debugpy = ">=1.3.0"
 mkdocs = {version = "^1.1.2", optional = true}
 mkautodoc = {version = "^0.1.0", optional = true}
+coverage = "^5.5"
+pre-commit = "^2.15.0"
 
 
 [tool.poetry.dev-dependencies]
@@ -55,6 +58,8 @@ isort = "^5.8.0"
 pytest = "^6.2.4"
 pytest-django = "^4.3.0"
 mypy = "^0.812"
+tox = ">3.2.0"
+
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkautodoc"]
