Dockerised dj-stripe
Set up docker-compose and Dockerfiles that work for both postgresql and mysql.

There is an issue with test user failing password verification with mysql but that has been fixed (temp) by using root user as the user.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     py37-django{22,30,master}-{postgres,postgres-nativejson,mysql,sqlite}
     py38-django{22,30,master}-{postgres,postgres-nativejson,mysql,sqlite}
     py38-django31-{postgres,mysql,sqlite}{,-nativejson}
+    py39-django{22,30,master}-{postgres,postgres-nativejson,mysql,sqlite}
     lint
 skip_missing_interpreters = True
 
