--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ mkautodoc = {version = "^0.1.0", optional = true}
 black = "^21.5b1"
 djangorestframework = "^3.11.0"
 psycopg2 = "^2.8.5"
+mysqlclient = ">=1.4.0"
 flake8 = "^3.9.2"
 isort = "^5.8.0"
 pytest = "^6.2.4"
