Added VSCODE Debug Config using debugpy

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,9 +33,10 @@ services:
     #   # - MYSQL_PASSWORD=random_number
     #   - MYSQL_ROOT_PASSWORD=random_number
 
-# TODO Perhaps add an entrypoint that doesn't start runserver until a connection cannot be established with the db
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: ./Dockerfile
     command: poetry run python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
