--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ python = "^3.6.2"
 Django = ">=2.2"
 jsonfield = ">=3.0"
 stripe = ">=2.48.0"
+debugpy = ">=1.3.0"
 mkdocs = {version = "^1.1.2", optional = true}
 mkautodoc = {version = "^0.1.0", optional = true}
 
@@ -54,6 +55,7 @@ isort = "^5.8.0"
 pytest = "^6.2.4"
 pytest-django = "^4.3.0"
 mypy = "^0.812"
+
 
 [tool.poetry.extras]
 docs = ["mkdocs", "mkautodoc"]
